--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,9 +5,10 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
-    box-shadow: 0 0 2px #999;
+    /* box-shadow: 0 0 2px #999; */
     position: sticky;
     top: 0px;
+    transition: all 0.5s ease;
     z-index: 999;
   }
   
